use exampler for generating docs, rebuild docs

--- a/templates/templ_index.html
+++ b/templates/templ_index.html
@@ -6,8 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>webgl</title>
-  <meta name="description" content="webgl">
+  <title>$project</title>
+  <meta name="description" content="$project">
   <meta name="author" content="stisa">
   <link rel="stylesheet" href="http://stisa.space/css/main.css">
   <link rel="apple-touch-icon-precomposed" href="http://stisa.space/favicon-152.png">
@@ -30,23 +30,11 @@
    
   </header>
   <section class="content">
-    <h2>Examples for webgl</h2>
+    <h2>Examples for $project</h2>
     <ul>
-            <li>
-          <a href="examples/ex1.html">Example: ex1</a>
-      </li>
-      <li>
-          <a href="examples/ex2.html">Example: ex2</a>
-      </li>
-      <li>
-          <a href="examples/ex3.html">Example: ex3</a>
-      </li>
-      <li>
-          <a href="examples/ex4.html">Example: ex4</a>
-      </li>
-
+      $li
     </ul>
-    <h2><a href="webgl.html">AutoDocs for webgl</a></h2>
+    <h2><a href="$project.html">AutoDocs for $project</a></h2>
     <h2><a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API">Mozilla Documentation</a></h2>
   </section>
 </body>
